ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: release
  namespace: release-lab

spec:
  ingressClassName: nginx

  rules:
  - host: release.local

    http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: canary-service
            port:
              number: 80
  - host: inventory.local

    http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: inventory-service
            port:
              number: 80
